--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,3 +189,46 @@ footer {
     padding: 20px 30px;
     border-left: 2px solid var(--primary-color);
 }
+
+/* Main content */
+
+.content {
+    width: 100%;
+    max-width: 1240px;
+    margin: 0 auto;
+    margin-top: 100px;
+    font-size: 1.3em;
+}
+
+section {
+    display: flex;
+    gap: 2em;
+    padding: 2em 0;
+    width: 100%;
+    max-width: 100%;
+    align-items: center;
+    margin: 0 auto;
+}
+
+section>div {
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+.text-content {
+    width: 100%;
+    padding: 0 1em;
+}
+
+h1 {
+    font-size: 1.5em;
+    margin-bottom: 1em;
+    font-family: var(--sans-font);
+}
+
+h3 {
+    font-family: var(--sans-font);
+    font-weight: 300;
+}
+
