--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,6 +473,26 @@ div:hover.tooltip span {
     z-index: 999;
 }
 
+/*booked page */
+.logo-center {
+    margin: 0 auto;
+    padding: 0;
+    width: fit-content;
+    color: var(--secondary-color);
+}
+
+#booking-confirmation {
+    margin: 0 auto;
+    margin-top: 2px;
+    width: 40%;
+    text-align: center;
+    font-size: 1.3em;
+}
+
+#booking-confirmation div {
+    margin: 2em auto;
+}
+
 /* footer */
 
 footer {
